[project]
name = "youtube-network-topology-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
]
